# csv-summer

./: Dockerfile.backend  Dockerfile.executor  README.md  docker-compose.yaml  pyproject.toml  swagger.yaml
backend/: __init__.py  app.py
data/: example.csv
executor/: __main__.py
rabbitconf/: definitions.json  rabbitmq.conf  rabbitmq.config
