[tool.poetry]
name = "csv-summer"
version = "0.1.0"
description = "Демо-проект на Python"
authors = ["Daniil Botnarenku <daniil.botnarenku@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
redis = {extras = ["hiredis"], version = "^4.3.4"}
pika = "^1.3.0"
aio-pika = "^8.1.1"
boto3 = "^1.24.53"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
